API REST - Error 500 si s'envia consulta amb camps buits i canvis en paginació https://github.com/GovernIB/digitalib/issues/218
